--- a/src/components/Front/Front.css
+++ b/src/components/Front/Front.css
@@ -1,3 +1,11 @@
 .Front {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
+}
+
+.Logo {
+  align-self: center;
 }
