--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,10 +1,31 @@
+@import url("https://fonts.googleapis.com/css?family=Muli");
+
+/*
+UOTTHACC LOGO HEX COLORS:
+BLUE BORDER #3366cc
+BLUE TEXT #084259
+RED TEXT #8b181d
+*/
+
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Muli", sans-serif;
 }
 
 .App {
   margin-left: 10%;
   margin-right: 10%;
+}
+
+h2 {
+  color: #3366cc;
+}
+
+h3 {
+  color: #8b181d;
+}
+
+h5 {
+  color: gray;
 }
