--- a/src/components/Organizer/Organizer.css
+++ b/src/components/Organizer/Organizer.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   width: 200px;
   height: 200px;
 }
