--- a/src/components/Front/Front.css
+++ b/src/components/Front/Front.css
@@ -3,10 +3,28 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  background-image: url("../../images/bg.png");
   height: 100vh;
+  margin-bottom: 100px;
 }
 
 .Logo {
   align-self: center;
-  max-width: 100%;
+  height: auto;
+  width: 50vw;
+  padding-bottom: 10vh;
+}
+
+.button {
+  padding-top: 50px;
+}
+
+h1 {
+  color: white;
+}
+
+#body .btn {
+  background-color: #086788;
+  color: white;
 }
