--- a/src/components/Organizer/Organizer.css
+++ b/src/components/Organizer/Organizer.css
@@ -1,12 +1,13 @@
 .Organizer {
-  align-content: space-between;
-  justify-content: space-evenly;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
 }
 
-.OrganizerItem {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 200px;
+.Organizer-Group {
+  margin-bottom: 50px;
+}
+
+#body .btn-org {
+  margin: 20px;
 }
