Added past hackathons section

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -27,13 +27,13 @@ h1 {
 }
 
 h2 {
-  color: #47b9a9;
+  color: black;
   font-size: 4em;
   font-family: "Poppins", sans-serif;
 }
 
 h3 {
-  color: #fca311;
+  color: black;
   font-size: 1.5em;
 }
 
