--- a/src/components/Past/Past.css
+++ b/src/components/Past/Past.css
@@ -7,6 +7,9 @@
 .logobutton {
   margin-left: 20px;
   margin-right: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 950px) {
@@ -21,8 +24,6 @@
   height: 125px;
   position: relative;
   align-items: center;
-  margin-left: 30px;
-  margin-right: 30px;
 }
 
 .logobutton button {
