--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,63 +1,81 @@
-.Navbar {
-  background-color: white;
-  position: fixed;
-  z-index: 10;
-  left: 0%; /* HAS TO MATCH APP margin-left - 2*/
-  right: 0%; /* HAS TO MATCH APP margin-right - 2*/
-  top: 0;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  height: 95px;
-  align-items: center;
-  position: relative;
+@media only screen and (max-width: 2560px) {
+  .Navbar {
+    background-color: white;
+    z-index: 10;
+    left: 0%; /* HAS TO MATCH APP margin-left - 2*/
+    right: 0%; /* HAS TO MATCH APP margin-right - 2*/
+    top: 0;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 95px;
+    align-items: center;
+    position: relative;
+  }
+
+  .Navbar img {
+    margin-top: 15px;
+    padding-left: 10px;
+    height: auto;
+    width: 75px;
+  }
+
+  .PageTitle {
+    align-self: flex-start;
+  }
+
+  .NavLinks {
+    display: flex;
+    flex-direction: row;
+    margin-right: 20px;
+    align-items: center;
+  }
+
+  .PageLinks {
+    margin-right: auto;
+    height: auto;
+    display: flex;
+  }
+
+  .PageLinks a {
+    color: black;
+    margin-left: 16px;
+    text-decoration: none;
+    padding: 6px;
+    font-weight: 700;
+    font-size: 15px;
+  }
+
+  .NavLinks a {
+    color: black;
+  }
+
+  .NavLinks box-icon {
+    margin: 15px;
+  }
+
+  .MobileMenu {
+    display: none;
+  }
 }
 
-.Navbar img {
-  margin-top: 15px;
-  padding-left: 10px;
-  height: auto;
-  width: 75px;
-}
-
-.PageTitle {
-  align-self: flex-start;
-}
-
-.NavLinks {
-  display: flex;
-  flex-direction: row;
-  margin-right: 20px;
-  align-items: center;
-}
-
-.PageLinks {
-  margin-right: auto;
-  height: auto;
-  display: flex;
-}
-
-.PageLinks a {
-  color: black;
-  margin-left: 16px;
-  text-decoration: none;
-  padding: 6px;
-  font-weight: 700;
-  font-size: 15px;
-}
-
-.NavLinks a {
-  color: black;
-}
-
-.NavLinks box-icon {
-  margin: 15px;
-}
-
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 950px) {
   .Navbar {
     left: 0;
     right: 0;
+  }
+
+  .NavLinks {
+    display: none;
+  }
+
+  .PageLinks {
+    display: none;
+  }
+
+  .MobileMenu {
+    display: block;
+    color: black;
   }
 }
