Navbar now only displays social media links in mobile view

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -67,17 +67,14 @@
     right: 0;
   }
 
-  .NavLinks {
-    display: none;
-  }
-
   .PageLinks {
     display: none;
   }
 
-  .MobileMenu {
-    display: block;
-    color: black;
-    margin-right: 25px;
+  .NavLinks {
+    display: flex;
+    flex-direction: row;
+    margin-right: 1px;
+    align-items: center;
   }
 }
