--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -48,8 +48,11 @@
   .FooterLinks a {
     font-size: 12px;
     color: black;
-    text-decoration: none;
     font-weight: 500;
+  }
+
+  .FooterLinks a:hover {
+    text-decoration: underline;
   }
 
   .Signature {
