--- a/src/components/Sponsor/Sponsor.css
+++ b/src/components/Sponsor/Sponsor.css
@@ -3,13 +3,24 @@
   text-align: center;
 }
 
-div[class^="row"] {
-  transition: width 0.3s, height 0.3s;
+.row {
+  margin-top: 60px;
 }
 
 img {
   max-width: 100%;
-  height: auto;
-  margin: 30px 20px;
   align-self: center;
+  transition: 1s;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.row a {
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+#blurWrap:hover img:not(:hover) {
+  opacity: 0.4;
 }
