--- a/src/components/Organizer/Organizer.css
+++ b/src/components/Organizer/Organizer.css
@@ -11,3 +11,26 @@
 #body .btn-org {
   margin: 20px;
 }
+
+.md-cards h3 {
+  padding: 0.5em;
+  margin: 0;
+}
+
+.md-img {
+  pointer-events: none;
+  border-radius: 8px;
+}
+
+.demo-card .mbsc-card-title {
+  font-size: 14px;
+  padding-top: 8px;
+  margin: 0;
+}
+
+.md-rank {
+  font-size: 12px;
+  position: absolute;
+  bottom: 8px;
+  left: 8px;
+}
