--- a/src/components/Organizer/Organizer.css
+++ b/src/components/Organizer/Organizer.css
@@ -12,25 +12,16 @@
   margin: 20px;
 }
 
-.md-cards h3 {
-  padding: 0.5em;
-  margin: 0;
+.Organizer-Group {
+  margin-bottom: 50px;
 }
 
-.md-img {
-  pointer-events: none;
-  border-radius: 8px;
+#cards > .ui.card {
+  width: 275px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  margin: 15px;
 }
 
-.demo-card .mbsc-card-title {
-  font-size: 14px;
-  padding-top: 8px;
-  margin: 0;
-}
-
-.md-rank {
-  font-size: 12px;
-  position: absolute;
-  bottom: 8px;
-  left: 8px;
+h3 {
+  margin-bottom: 30px;
 }
