--- a/src/components/Sponsor/Sponsor.css
+++ b/src/components/Sponsor/Sponsor.css
@@ -3,16 +3,14 @@
   text-align: center;
 }
 
-.row {
-  margin-top: 60px;
-}
-
-img {
+.row > a > img {
   max-width: 100%;
   align-self: center;
-  transition: 1s;
+  transition: 2s;
   margin-left: 30px;
   margin-right: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .row a {
@@ -21,8 +19,6 @@ img {
   margin-bottom: auto;
 }
 
-#blurWrap:hover img:not(:hover) {
-  opacity: 0.4;
-  height: auto;
-  margin: 30px 20px;
+.row > a > img:hover {
+  transform: scale(1.1);
 }
