--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -22,7 +22,7 @@
 .LogoText {
   display: block;
   font-size: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 120px;
 }
 
 @media only screen and (max-width: 10000px) {
@@ -47,7 +47,7 @@
 
   .FooterLinks a {
     font-size: 12px;
-    color: black;
+    color: #0d0d0d;
     font-weight: 500;
   }
 
