--- a/src/components/Front/Front.css
+++ b/src/components/Front/Front.css
@@ -38,7 +38,7 @@
 .TextLogo {
   align-self: center;
   height: auto;
-  width: 50vw;
+  width: 35vw;
   padding-bottom: 1vw;
 }
 
@@ -49,6 +49,8 @@
 
 h1 {
   color: white;
+  font-weight: 100;
+  font-family: ParagraphFont;
 }
 
 @media only screen and (max-width: 2560px) {
@@ -73,7 +75,7 @@ h1 {
   .TextLogo {
     align-self: center;
     height: auto;
-    width: 90vw;
+    width: 200vw;
     padding-bottom: 1vw;
   }
 
