--- a/src/components/Past/Past.css
+++ b/src/components/Past/Past.css
@@ -7,23 +7,27 @@
     width: 150px;
     height: 150px;
     align-self: center;
-    -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+
+  .logo-2019 {
+    width: 143px;
+    height: 150px;
+    align-self: center;
   }
 
   .logobutton button {
     font-family: BoldFont;
-    font-size: 18px;
-    font-weight: 700;
+    font-size: 15px;
+    font-weight: 100;
     margin: 20px;
     border: none;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    border-radius: 8px;
     width: 175px;
-    height: 60px;
-    margin-top: 35px;
-    transition: 0.5s ease-in-out;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)) top/100% 800%;
+    height: 55px;
+    margin-top: 70px;
+    transition: 0.3s ease-in-out;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.411)) top/100% 800%;
   }
 
   .logobutton button:hover {
@@ -37,7 +41,7 @@
   }
 
   .btn2 {
-    background-color: #49e6c0 !important;
+    background-color: #1b6889 !important;
     color: white;
   }
 
@@ -47,8 +51,8 @@
   }
 
   .btn4 {
-    background-color: #515151 !important;
-    color: white;
+    background-color: #373737 !important;
+    color: #ffffff;
   }
 
   .Hackathon {
@@ -60,10 +64,11 @@
   }
 
   .circle {
-    height: 15px;
-    width: 15px;
+    height: 12px;
+    width: 12px;
     background-color: #595959;
     margin: auto;
+    margin-top: 51px;
     border-radius: 50%;
   }
 
@@ -72,7 +77,6 @@
     background-color: #595959;
     width: 2px;
     margin: auto;
-    margin-top: -10px;
   }
 
   .Timeline {
@@ -92,6 +96,12 @@
 
   .logo {
     width: 200px;
+    height: 200px;
+    align-self: center;
+  }
+
+  .logo-2019 {
+    width: 196px;
     height: 200px;
     align-self: center;
   }
