--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     height: 75px;
     align-items: center;
-    position: absolute;
+    position: fixed;
   }
 
   .Navbar img {
