--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 90px;
+    height: 75px;
     align-items: center;
     position: fixed;
   }
@@ -19,9 +19,9 @@
   }
 
   .Navbar img {
-    margin-top: 22px;
-    margin-left: 22px;
+    margin-top: 13px;
     padding-left: 10px;
+    margin-left: 20px;
     height: auto;
     width: 60px;
   }
@@ -37,7 +37,7 @@
   .NavLinks {
     display: flex;
     flex-direction: row;
-    margin-right: 22px;
+    margin-right: 20px;
     align-items: center;
   }
 
@@ -61,7 +61,7 @@
   }
 
   .NavLinks a {
-    color: #0d0d0d;
+    color: black;
   }
 
   .NavLinks box-icon {
@@ -77,15 +77,12 @@
     position: absolute;
     width: 100%;
     transform: scaleX(0);
-    border: solid;
-    border-radius: 5px;
-    border-color: #ffffff00;
-    height: 33px;
+    height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #9a9a9a2d;
+    background-color: black;
     transform-origin: bottom right;
-    transition: transform 0.2s ease-out;
+    transition: transform 0.3s ease-out;
   }
 
   .PageLinks a:hover:after {
@@ -107,7 +104,7 @@
   .NavLinks {
     display: flex;
     flex-direction: row;
-    margin-right: 20px;
+    margin-right: 1px;
     align-items: center;
   }
 }
