--- a/src/components/Past/Past.css
+++ b/src/components/Past/Past.css
@@ -7,12 +7,8 @@
     width: 150px;
     height: 150px;
     align-self: center;
-  }
-
-  .logo-2019 {
-    width: 143px;
-    height: 150px;
-    align-self: center;
+    -webkit-filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.25));
   }
 
   .logo-2019 {
@@ -25,17 +21,16 @@
 
   .logobutton button {
     font-family: BoldFont;
-    font-size: 15px;
-    font-weight: 100;
+    font-size: 16px;
     margin: 20px;
     border: none;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
     width: 175px;
     height: 55px;
-    margin-top: 70px;
+    margin-top: 35px;
     transition: 0.3s ease-in-out;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.411)) top/100% 800%;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.45)) top/100% 800%;
   }
 
   .logobutton button:hover {
@@ -76,7 +71,7 @@
     width: 12px;
     background-color: #595959;
     margin: auto;
-    margin-top: 51px;
+    margin-top: 41px;
     border-radius: 50%;
   }
 
