--- a/src/components/Front/Front.css
+++ b/src/components/Front/Front.css
@@ -4,8 +4,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 100vh;
-  margin-bottom: 100px;
+  height: 75vh;
+  margin-bottom: 33vh;
   z-index: 1;
   overflow: hidden;
 }
@@ -30,6 +30,7 @@
 
 .Hero {
   display: flex;
+  position: relative;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -38,12 +39,13 @@
 .TextLogo {
   align-self: center;
   height: auto;
-  width: 50vw;
-  padding-bottom: 1vw;
+  width: 35vw;
+  padding-bottom: 0px;
+  padding-top: 65px;
 }
 
 .HeroText {
-  width: 60%;
+  width: 100%;
   text-align: center;
 }
 
@@ -53,31 +55,47 @@ h1 {
 
 @media only screen and (max-width: 2560px) {
   h1 {
-    font-size: 2vw;
+    font-size: 1.4vw;
   }
 }
 
 @media only screen and (max-width: 1440px) {
   h1 {
-    font-size: 3vw;
+    font-size: 1.4vw;
   }
 }
 
 @media only screen and (max-width: 1080px) {
+  .TextLogo {
+    width: 50%;
+  }
   h1 {
-    font-size: 4vw;
+    font-size: 2vw;
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 850px) {
+  h1 {
+    font-size: 3vw;
+  }
+  .HeroText {
+    width: 40%;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 705px) {
   .TextLogo {
     align-self: center;
     height: auto;
-    width: 90vw;
-    padding-bottom: 1vw;
+    width: 70%;
   }
 
   h1 {
-    font-size: 5.5vw;
+    font-size: 3.8vw;
+  }
+  .HeroText {
+    width: 50%;
+    text-align: center;
   }
 }
