--- a/src/components/Past/Past.css
+++ b/src/components/Past/Past.css
@@ -2,55 +2,49 @@
   .Past {
     width: 100%;
   }
-
   .logo {
     width: 150px;
     height: 150px;
     align-self: center;
-    -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   }
-
+  .logo-2019 {
+    width: 140px;
+    height: 150px;
+    align-self: center;
+  }
   .logobutton button {
     font-family: BoldFont;
-    font-size: 18px;
-    font-weight: 700;
+    font-size: 15px;
+    font-weight: 100;
     margin: 20px;
     border: none;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    border-radius: 8px;
     width: 175px;
-    height: 60px;
-    margin-top: 35px;
-    transition: 0.5s ease-in-out;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)) top/100% 800%;
+    height: 55px;
+    margin-top: 70px;
+    transition: 0.3s ease-in-out;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.411)) top/100% 800%;
   }
-
   .logobutton button:hover {
     background-position: bottom;
     cursor: pointer;
   }
-
   .btn1 {
     background-color: #92051a !important;
     color: white;
   }
-
   .btn2 {
-    background-color: #49e6c0 !important;
+    background-color: #20c9a2 !important;
     color: white;
   }
-
   .btn3 {
     background-color: #404ca3 !important;
     color: white;
   }
-
   .btn4 {
-    background-color: #515151 !important;
-    color: white;
+    background-color: #373737 !important;
+    color: #ffffff;
   }
-
   .Hackathon {
     margin-left: 10px;
     margin-right: 10px;
@@ -58,23 +52,20 @@
     margin-bottom: 10px;
     padding-top: 50px;
   }
-
   .circle {
-    height: 15px;
-    width: 15px;
+    height: 12px;
+    width: 12px;
     background-color: #595959;
     margin: auto;
+    margin-top: 21px;
     border-radius: 50%;
   }
-
   .line {
     height: 60px;
     background-color: #595959;
     width: 2px;
     margin: auto;
-    margin-top: -10px;
   }
-
   .Timeline {
     height: 2px;
     background-color: #595959;
@@ -89,26 +80,26 @@
   .logobutton button {
     margin-top: 50px;
   }
-
   .logo {
     width: 200px;
     height: 200px;
     align-self: center;
   }
-
+  .logo-2019 {
+    width: 188px;
+    height: 200px;
+    align-self: center;
+  }
   .Hackathon {
     margin-left: 30px;
     margin-right: 30px;
   }
-
   .Timeline {
     display: none;
   }
-
   .line {
     display: none;
   }
-
   .circle {
     display: none;
   }
