--- a/src/components/Past/Past.css
+++ b/src/components/Past/Past.css
@@ -31,6 +31,7 @@
   }
   .btn1 {
     background-color: #92051a !important;
+    width: 50%;
     color: white;
   }
   .btn2 {
@@ -45,6 +46,11 @@
     background-color: #373737 !important;
     color: #ffffff;
   }
+  .btn5 {
+    background-color: #41206a !important;
+    color: #ffffff;
+  }
+
   .Hackathon {
     margin-left: 10px;
     margin-right: 10px;
